--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ matplotlib==3.5.1
 mongoengine==0.23.1
 numpy==1.21.5
 oauthlib==3.2.0
+opencv-python-headless==4.1.2.30
 packaging==21.3
 pandas==1.3.5
 Pillow==9.0.1
