--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
+-f https://download.pytorch.org/whl/torch_stable.html
+
+
 djangorestframework~=3.13.1
 Django~=3.2.12
 pymongo~=3.12.3
 bcrypt~=3.2.0
 mongoengine~=0.23.1
 python-dotenv~=0.19.2
-opencv-python~=4.5.5.64
+opencv-python-headless==4.1.2.30
 numpy~=1.21.5
 dnspython~=2.2.0
 idna~=3.3
@@ -23,7 +26,7 @@ pytz~=2021.3
 sahi~=0.9.0
 Shapely~=1.8.1.post1
 tqdm~=4.63.0
-torch~=1.11.0
+torch==1.8.1+cpu
 terminaltables~=3.1.10
 thop~=0.0.31.post2005241907
 PyYAML~=6.0
@@ -37,7 +40,7 @@ matplotlib~=3.5.1
 construct~=2.10.68
 pandas~=1.3.5
 tensorboard~=2.8.0
-torchvision~=0.12.0
+torchvision==0.9.1+cpu
 tensor~=0.3.6
 urllib3~=1.26.8
 sqlparse~=0.4.2
